--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,7 +186,7 @@ input, select, textarea {
 		transition: color 0.2s ease, border-bottom 0.2s ease;
 		text-decoration: none;
 		border-bottom: dotted 1px;
-		color: inherit;
+		color: darkseagreen;
 	}
 
 		a:hover {
@@ -3368,7 +3368,7 @@ input, select, textarea {
 		}
 
 		#main a:hover {
-			color: #636363;
+			color: rgb(87, 129, 87);
 		}
 
 		#main strong, #main b {
