--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,15 @@ a:hover .hover-text {
     display: inline-block;
 }
 
+.glow-hover {
+  transition: box-shadow 0.3s ease; /* Smooth transition */
+}
+
+/* Green glow on hover */
+.glow-hover:hover {
+  box-shadow: 0 0 10px 5px #8fbc8f;
+}
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
